services/capabilities_site/k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: capabilities-site
  labels:
    app: aisena-capabilities-site
    component: frontend
    environment: production
spec:
  selector:
    app: aisena-capabilities-site
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
  sessionAffinity: {}
  internalTrafficPolicy: Cluster
